# OOPSZI_Lab_1

CMakeProject1/: CMakeLists.txt
CMakeProject1/src/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_main.c
